UI update contract working fine with rinleby nw

--- a/app/verify.html
+++ b/app/verify.html
@@ -131,22 +131,23 @@
 
   <body>
 
+
     <div class="header">
       <a style="font-size: 45px" class="logo">WeLend
       </a>
       <br>     
       <br>
 
-      <a style="font-size: 20px" class="logo">Blockchain powered Distributed Lending</a>
+      <a style="font-size: 20px" class="logo" href="/">Blockchain powered Distributed Lending</a>
       <div class="header-right">
-        <a class="active" href="file:///home/nihilent/MSCM/mscm/mscm_ui/index.html">Home</a>
-        <a class="nactive" href="file:///home/nihilent/MSCM/mscm/mscm_ui/track.html">Profile </a>
-        <a class="nactive" href="file:///home/nihilent/MSCM/mscm/mscm_ui/track.html">Learn </a>
-        <a class="nactive" href="file:///home/nihilent/MSCM/mscm/mscm_ui/track.html">Get Started </a>
+        <a class="active" href="/">Home</a>
+        <a class="nactive" href="/">Profile </a>
+        <a class="nactive" href="/">Learn </a>
+        <a class="nactive" href="/">Get Started </a>
 
       </div>
     </div>
-    <br><br>
+
 
     <!-- Header -->
     <header class="intro-header">
